syntax = "proto3";
package consumer.pricefeed;

option go_package = "consumer/x/pricefeed/types";

import "gogoproto/gogo.proto";
import "consumer/pricefeed/params.proto";
// this line is used by starport scaffolding # genesis/proto/import


// GenesisState defines the pricefeed module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}
